--- a/louisvilleMusicCo/index.html
+++ b/louisvilleMusicCo/index.html
@@ -62,7 +62,7 @@
 
 
 
-<!-- SITE UNDER CONSTRUCION -->
+<!-- SITE UNDER CONSTRUCION++++++++++++++++++++++++++++ -->
 <div class="uc">
 	<img src="images/UCMin.jpg" alt="Site Is Under Construction" class="ucm">
 </div>
