Added form to Contact Us and Signing Options
Added HTML Form and CSS.

--- a/louisvilleMusicCo/index.html
+++ b/louisvilleMusicCo/index.html
@@ -15,25 +15,26 @@
 	<div class"slide">
 		<div id="menuA">
 			<ul class="menuA-ul">
-				<li class="selected"><a href="signin.html">
-					Sign In</li></a>
-				<li><a href="createaccount.html">
-					Create Account</a></li>
+				<li class="selected"><a href="contactus.html">
+					Sign In
+				</li></a>
 				<li><a href="contactus.html">
-					Contact Us</a></li>
+					Create Account
+				</a></li>
+				<li><a href="contactus.html">
+					Contact Us
+				</a></li>
 			</ul>
 		</div>
 
 		<div id="mainBar">
 			<ul>
 				<li class="selected"><a href="index.html">Home</li></a>
-				<li><a href="woodwinds.html">Woodwinds</li></a>
-				<li><a href="brass.html">Brass</a></li>
-				<li><a href="percussion.html">Percussion</a></li>
-				<li><a href="strings.html">Strings</a></li>
-				<li><a href="repairs.html">Repairs</li></a>
-				<li><a href="lessons.html">Lessons</li></a>
-				<li><a href="rentals.html">Rentals</li></a>
+				<li><a href="http://www.louisvillemusicco.com/woodwinds-126529.cfm">Woodwinds</li></a>
+				<li><a href="http://www.louisvillemusicco.com/brass-126530.cfm">Brass</a></li>
+				<li><a href="http://www.louisvillemusicco.com/percussion-126531.cfm">Percussion</a></li>
+				<li><a href="http://www.louisvillemusicco.com/strings-126533.cfm">Strings</a></li>
+				<li><a href="http://www.louisvillemusicco.com/rentals-128014.cfm">Rentals</li></a>
 			</ul>
 		</div>
 			
@@ -43,7 +44,7 @@
 		<div id="gradient slide"></div>
 			<form class="searchbox" action="">
   				<input type="search" placeholder="Search" />
-  				<button type="submit" value="search">&nbsp</button>
+  				<button type="submit" value="search" id="sbutton">&nbsp</button>
 			 </form>
 		</div>	
 
@@ -265,7 +266,9 @@
 			      <td></td>
 			   </tr>
 			   <tr>
-			   	  <td><a href="contactus.html">Contact Us</a></td>	
+			   	  <td><a href="contactus.html">
+			   	  	Contact Us
+			   	  </a></td>	
 			      <td></td>
 			      <td></td>
 			      <td></td>
