Update: Continuing to make changes for style and Resposiveness

--- a/louisvilleMusicCo/contactus.html
+++ b/louisvilleMusicCo/contactus.html
@@ -38,19 +38,10 @@
 			</ul>
 		</div>
 			
-<!-- Cart image, .searchbox and buttons -->
-
-
-		<div id="gradient slide"></div>
-			<form class="searchbox" action="">
-  				<input type="search" placeholder="Search" />
-  				<button type="submit" value="search" id="sbutton">&nbsp</button>
-			 </form>
-		</div>	
-
 <!-- .icons Facebook & Twitter -->		
 		<div class="icons">
-				<a href="https://twitter.com/LMCmusiccompany" class="tfIcons">
+        <a href="index.html" alt="home"><img src="images/dna.png" class="tfIcons"> 
+        <a href="https://twitter.com/LMCmusiccompany" class="tfIcons">
 					<img src="images/t.svg">
 				</a>
 				<a href="https://www.facebook.com/pages/Louisville-Music-Co/129696240544295?ref=hl" class="tfIcons">
