--- a/lmc/contactus.html
+++ b/lmc/contactus.html
@@ -218,7 +218,7 @@
       alert("Information Sent.\nYou Will Be Hearing From Us Soon.");
 
       });
-       $(location).attr('http://heatcode.github.io/lmc/index.html');
+       $(location).attr('http://heatcode.github.io/lmc');
 });
 
 
