--- a/lmc/contactus.html
+++ b/lmc/contactus.html
@@ -215,10 +215,10 @@
 <script>
      $(document).ready(function(){
        $('#form').submit(function(){
-      alert("Information Sent.\nYou Will Be Hearing From Us Soon.");
+      alert("Your information has been sent, in theory. Unfortunately, we do not have a server connected at this time.");
 
       });
-       location.assign('http://heatcode.github.io/lmc/index.html');
+    location.assign('http://heatcode.github.io/lmc/index.html');
 });
 
 
