--- a/lmc/index.html
+++ b/lmc/index.html
@@ -66,10 +66,10 @@
 
 
 <!-- SITE UNDER CONSTRUCION++++++++++++++++++++++++++++ -->
-<div class="uc">
+<!-- <div class="uc">
 	<img src="images/UCMin.jpg" alt="Site Is Under Construction" class="ucm">
 </div>
-
+ -->
 
 <!-- #shopConnect Bar -->
 
