--- a/lmc/index.html
+++ b/lmc/index.html
@@ -13,7 +13,7 @@
 	<header>
 
 		<!-- top navigation bar -->
-
+<div class="topnav">
 		<div id="menuA">
 			<ul class="menuA-ul nav">
 				
@@ -72,7 +72,7 @@
 
 				<a href="https://plus.google.com/u/0/+Louisvillemusicco01/posts" class="tfIcons"><img src="images/g+.svg" alt="Google Plus Icon"></a>
 			</div>
-
+</div>
 
 <!-- SITE UNDER CONSTRUCION++++++++++++++++++++++++++++ -->
 <!-- <div class="uc">
